[package]
name = "maze"
version = "0.1.0"
authors = ["Petr Kosikhin <petr.kosikhin@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "rs/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
wasm-bindgen = "0.2.60"
js-sys = "0.3.37"

[dependencies.web-sys]
version = "0.3.37"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
  'console',
  'KeyboardEvent'
]
